# cicd-tool

./: .pre-commit-config.yaml  .secrets.baseline  README.md  action.yml  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  test-cicd-tool.yml
templates/github/: ci.yml.j2  requirements.txt
tests/: golden.yml  test_cli.py
