[project]
name = "cicd-tool"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["click","jinja2","pyyaml","requests","gitpython","loguru"]
readme = "README.md"

[project.scripts]
cicd = "cli:cli"  # if cli.py stays at repo root; or "cicd.cli:cli" if you move it into a package

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"